--- a/index.html
+++ b/index.html
@@ -3,9 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="dist/styles.css">
+    <title>Frontend Bootcamp</title>
 </head>
 <body>
-    
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark menu py-3">
+        <div class="container">
+            <a class="navbar-brand" href="#">LOGO</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navmenu">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">What You'll Learn</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Questions</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Instructors</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <section class="bg-dark text-light p-5 text-center text-sm-start" id="bground-intro">
+        <div class="container" >
+            <div class="d-sm-flex align-items-center justify-content-between">
+                <div>
+                    <h1>Become a <span class="text-warning">Web Developer</span> </h1>
+                    <p class="lead">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum labore nihil quaerat placeat laboriosam iusto eos nisi sequi nemo vel!
+                    </p>
+                    <button class="btn btn-primary btn-lg">Enroll Now!</button>
+                </div>
+                
+                <img class="img-fluid w-50 d-none d-sm-block"  src="./img/htmlcssjs.png" alt="" id="html_logo">
+            </div>
+        </div>
+    </section>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
